# Incap_MV

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
src/app_helpers/: maps.py  report.py  state.py  utils.py
src/data_sources/: corine.py  eea_waterbase.py  natura2000.py
src/ingestion/: __init__.py  geocode.py  spatial.py  uploaders.py
src/rules/: engine.py
src/rules/configs/: sfdr_pai7_v1.yaml
tests/: test_geocode.py  test_rules.py  test_spatial.py
