[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clm-mvp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",
    "geopy>=2.4",
    "requests>=2.31",
    "pyyaml>=6.0",
    "rtree>=1.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
